Bug 1204944, convert drag position coordinates properly, r=mstange